base/cdn-sim/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-sim
  namespace: cdn-sim
spec:
  selector:
    app: cdn-sim
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
